--- a/src/components/styles.module.css
+++ b/src/components/styles.module.css
@@ -4,5 +4,9 @@
 }
 
 .variable{
-  padding-left: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-left: 16px;
 }
