--- a/src/components/GetModulationByPoints/style.module.css
+++ b/src/components/GetModulationByPoints/style.module.css
@@ -1,20 +1,4 @@
-.modalWr{
-  position:absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modalContent{
-  width: 35%;
-  height: 35%;
-  background-color: aliceblue;
-  border-radius: 15%;
+.formWrapper{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -23,6 +7,7 @@
 
 .button{
   margin-left: 4px;
+  margin-top: 4px;
   font-family: 'Raleway', sans-serif;
   font-size: 15px;
   color: #fff;
@@ -36,4 +21,22 @@
 .button:hover{
   color: #f6980c;
   transition: background-color 0.3s ease-in;
+}
+
+.input {
+	width: 50px;
+	font-size: 15px;
+	padding: 6px 0 4px 10px;
+	border: 1px solid #cecece;
+	background: #F6F6f6;
+	border-radius: 8px;
+}
+
+.selector {
+	width: 70px;
+	font-size: 15px;
+	padding: 6px 0 4px 10px;
+	border: 1px solid #cecece;
+	background: #F6F6f6;
+	border-radius: 8px;
 }
