--- a/src/components/GetModulationForCST/style.module.css
+++ b/src/components/GetModulationForCST/style.module.css
@@ -1,20 +1,4 @@
-.modalWr{
-  position:absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modalContent{
-  width: 35%;
-  height: 35%;
-  background-color: aliceblue;
-  border-radius: 15%;
+.formWrapper{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
