--- a/src/components/GetModulationByPoints/style.module.css
+++ b/src/components/GetModulationByPoints/style.module.css
@@ -1,8 +1,8 @@
 .formWrapper{
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  flex-direction: column;
 }
 
 .button{
