--- a/src/components/Modal/style.module.css
+++ b/src/components/Modal/style.module.css
@@ -10,15 +10,12 @@
   align-items: center;
 }
 
-.modalContent{
+.modal{
   width: 35%;
   height: 35%;
   background-color: aliceblue;
   border-radius: 15%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
+
 }
 
 .button{
@@ -36,4 +33,23 @@
 .button:hover{
   color: #f6980c;
   transition: background-color 0.3s ease-in;
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.functionalButtons{
+  display: flex;
+  align-items: center;
+  height: 50%;
+}
+
+.closeButton{
+  margin-bottom: 8px;
 }
