--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,16 @@ body {
   color: #222;
 }
 
+.singleElementWrapper{
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.notSingleElementWrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
